<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.QuizzFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/logout_menu"
            app:title="@string/quizz"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/textView2"
        style="@style/my_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_this_a_question"
        app:layout_constraintBottom_toTopOf="@+id/btnTrue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnTrue"
        style="@style/my_button_style"
        android:layout_marginStart="@dimen/extreme_dimens"
        android:layout_marginEnd="@dimen/extreme_dimens"
        android:layout_marginBottom="@dimen/large_dimens"
        android:text="@string/_true"
        app:layout_constraintBottom_toTopOf="@+id/btnFalse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnFalse"
        style="@style/my_button_style"
        android:layout_marginStart="@dimen/extreme_dimens"
        android:layout_marginEnd="@dimen/extreme_dimens"
        android:layout_marginBottom="@dimen/extreme_dimens"
        android:text="@string/_false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>